# ConnectedComponents

./: .gitignore  CMakeLists.txt
src/: ComponentEvaluator.cpp  ComponentEvaluator.h  ConnectedComponentsBFS.cpp  ConnectedComponentsBFS.h  ConnectedComponentsUF.cpp  ConnectedComponentsUF.h  IComponentDetector.h  VisualizationUtils.cpp  VisualizationUtils.h  main.cpp
